[build-system]
requires = ["scikit-build-core>=0.10.7", "setuptools-scm>=8.1", "pybind11>=2.13.6"]
build-backend = "scikit_build_core.build"

[project]
name = "mqt-core"
description = "The Backbone of the Munich Quantum Toolkit"
readme = "README.md"
authors = [
    { name = "Lukas Burgholzer", email = "burgholzer@me.com" }
]
keywords = ["MQT", "quantum-computing", "design-automation", "decision-diagrams", "zx-calculus"]
license = { file = "LICENSE.md" }

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Typing :: Typed",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
evaluation = [
  "pandas[output-formatting]>=2.1.2",
]
qiskit = [
  "qiskit[qasm3-import]>=1.0.0",
]

[project.scripts]
mqt-core-dd-compare = "mqt.core.dd.evaluation:main"

[project.urls]
Homepage = "https://github.com/cda-tum/mqt-core"
Documentation = "https://mqt.readthedocs.io/projects/core"
Issues = "https://github.com/cda-tum/mqt-core/issues"
Discussions = "https://github.com/cda-tum/mqt-core/discussions"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Set the wheel install directory
wheel.install-dir = "mqt/core"

# Explicitly set the package directory
wheel.packages = ["src/mqt"]

# Set required Ninja version
ninja.version = ">=1.10"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}/{build_type}"

# Only build the Python bindings target
build.targets = ["ir"]

# Only install the Python package component
install.components = ["mqt-core_Python"]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/mqt/core/_version.py"]
sdist.exclude = [
    "**/.github",
    "**/doc",
    "**/docs",
    "**/meta",
    "**/plots",
    "**/test",
    "**/tests",
]

[tool.check-sdist]
sdist-only = ["src/mqt/core/_version.py"]
git-only = [
    "docs/*",
    "test/*",
]

[tool.scikit-build.cmake.define]
BUILD_MQT_CORE_BINDINGS = "ON"
BUILD_MQT_CORE_TESTS = "OFF"

[[tool.scikit-build.overrides]]
if.python-version = ">=3.13"
if.abi-flags = "t"
if.platform-system = "win32"
inherit.cmake.define = "append"
cmake.define.DISABLE_GIL = "1"


[tool.setuptools_scm]
write_to = "src/mqt/core/_version.py"


[tool.pytest.ini_options]
minversion = "7.2"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    'ignore:\s.*Pyarrow.*:DeprecationWarning:',
    'ignore:.*datetime\.datetime\.utcfromtimestamp.*:DeprecationWarning:',
    'ignore:.*no need for these schema-conformant objects.*:DeprecationWarning:', # Qiskit itself imports deprecated code (should be resolved in the 1.2.1 release)
]
log_cli_level = "info"
testpaths = ["test/python"]


[tool.coverage]
run.source = ["mqt.core"]
run.omit = [
    '*/_compat/*',
]
report.exclude_also = [
    '\.\.\.',
    'if TYPE_CHECKING:',
    'raise AssertionError',
    'raise NotImplementedError',
]


[tool.mypy]
files = ["src/mqt", "test/python", "noxfile.py"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src"]
python_version = "3.9"
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["qiskit.*", "matplotlib.*", "pytest_console_scripts.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
preview = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C90",     # <...> too complex
    "COM812",  # Conflicts with formatter
    "CPY001",  # Missing copyright notice at top of file
    "ISC001",  # Conflicts with formatter
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import should be at top of file
    "S101",    # Use of assert detected
    "S404",    # `subprocess` module is possibly insecure
    "TID252"   # Prefer absolute imports over relative imports from parent modules
]
typing-modules = ["mqt.core._compat.typing"]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Callable".msg = "Use collections.abc.Callable instead."
"typing.Iterator".msg = "Use collections.abc.Iterator instead."
"typing.Mapping".msg = "Use collections.abc.Mapping instead."
"typing.Sequence".msg = "Use collections.abc.Sequence instead."
"typing.Set".msg = "Use collections.abc.Set instead."
"typing.assert_never".msg = "Use mqt.core._compat.typing.assert_never instead."

[tool.ruff.lint.per-file-ignores]
"test/python/**" = ["T20", "INP001"]
"docs/**" = ["T20", "INP001"]
"noxfile.py" = ["T20", "TID251"]
"*.pyi" = ["D418", "DOC202", "PYI011", "PYI021"]
"*.ipynb" = [
    "D",    # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]
"src/mqt/core/_compat/**.py" = ["TID251", "A005"]
"src/mqt/core/dd/evaluation.py" = ["T201"]
"src/mqt/core/__main__.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.typos]
default.extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",  # ignore line
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on" # ignore block
]
[tool.typos.default.extend-words]
wille = "wille"
anc = "anc"
mch = "mch"


[tool.repo-review]
ignore = ["GH200"]


[tool.cibuildwheel]
build = "cp3*"
skip = "*-musllinux_*"
archs = "auto64"
test-groups = ["test"]
test-command = "pytest {project}/test/python"
build-frontend = "build[uv]"
enable = ["cpython-freethreading"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
environment = { DEPLOY = "ON" }

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[tool.cibuildwheel.windows]
before-build = "uv pip install delvewheel>=1.7.3"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --namespace-pkg mqt"
environment = { CMAKE_GENERATOR = "Ninja" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

# Some of our extra dependencies do not support free-threading yet.
[[tool.cibuildwheel.overrides]]
select = "cp3*t-*"
test-groups = []
test-command = "python -c \"from mqt import core\""


[tool.uv]
reinstall-package = ["mqt-core"]

[tool.uv.sources]
mqt-core = { workspace = true }

[dependency-groups]
build = [
  "pybind11>=2.13.6",
  "scikit-build-core>=0.10.7",
  "setuptools-scm>=8.1",
]
docs = [
  "furo>=2024.8.6",
  "ipython>=8.29; python_version >= '3.10'",
  "myst-nb>=1.1.2",
  "myst-parser>=4; python_version >= '3.10'",
  "setuptools-scm>=8.1",
  "sphinx>=8; python_version >= '3.10'",
  "sphinx-autoapi>=3.3.3",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinxcontrib-bibtex>=2.6.3",
  "sphinxcontrib-svg2pdfconverter>=1.2.3",
  "sphinxext-opengraph>=0.9.1",
  "pandas[output-formatting]>=2.1.2",
  "qiskit[qasm3-import,visualization]>=1.0.0",
  "scipy>=1.14.1; python_version >= '3.13'",
  "numpy>=2.1; python_version >= '3.13'",
]
test = [
  "pytest>=8.3.3",
  "pytest-console-scripts>=1.4.1",
  "pytest-cov>=6",
  "pandas[output-formatting]>=2.1.2",
  "qiskit[qasm3-import]>=1.0.0",
  "scipy>=1.14.1; python_version >= '3.13'",
  "numpy>=2.1; python_version >= '3.13'",
]
dev = [
  {include-group = "build"},
  {include-group = "docs"},
  {include-group = "test"},
]
